@@ -5,3 +5,6 @@ Sample table of contents
 * airline - A complete airline sample that shows both Web Service and O/X Mapping functionality in a complete application
 
 * echo - A simple sample that shows a bare-bones Echo service
+
+Both of these samples can be run by using the Jetty Web container. Simply issue the "mvn jetty:run" command in one of 
+the sample directories. Alternatively, you can build deployable war archives using "mvn package".
